--- a/kukutyan-system/3mYtN4.html
+++ b/kukutyan-system/3mYtN4.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/styles.css?v=1">
-
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
     <title>WEB謎 - BRAIN</title>
     <style>
         body {
@@ -799,6 +800,35 @@
         }
 
 
+        // Firebase設定情報
+        const firebaseConfig = {
+            apiKey: "AIzaSyACZVcf8cWzcu698PdbKKRVcbStH82lavc",
+            authDomain: "kukutyan-f48ae.firebaseapp.com",
+            projectId: "kukutyan-f48ae",
+            storageBucket: "kukutyan-f48ae.firebasestorage.app",
+            messagingSenderId: "894594120998",
+            appId: "1:894594120998:web:9160722e1d27e98afbd5e7",
+            measurementId: "G-8FSDCGV2M7"
+        };
+
+
+        // Firebase初期化
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Firestoreにデータを保存
+        document.getElementById("sendMessage").addEventListener("click", async () => {
+        const messageInput = document.getElementById("messageInput").value;
+        try {
+            await db.collection("chatLogs").add({
+            message: messageInput,
+            timestamp: new Date()
+            });
+            console.log("メッセージが保存されました！");
+        } catch (error) {
+            console.error("エラーが発生しました: ", error);
+        }
+        });
 
     </script>
 
