--- a/index.html
+++ b/index.html
@@ -3,49 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB謎 - BRAIN</title>
-    <link rel="stylesheet" href="/assets/css/styles.css?v=1">
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+    <title>AIウミガメのスープ</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #E6E6FA;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            color: #4B0082;
-            line-height: 1.6;
-        }
-        .content-container {
-            max-width: 800px;
+        .chat-container {
+            max-width: 600px;
             margin: 20px auto;
             padding: 20px;
-        }
-        .chat-container {
-            height: 300px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            height: 400px;
             overflow-y: auto;
-            background: #FFFFFF;
-            border: 2px solid #9370DB;
-            margin-bottom: 20px;
-            padding: 10px;
         }
-        .question-input {
-            width: 100%;
+        .message {
+            margin: 10px 0;
             padding: 10px;
-            margin-bottom: 10px;
+            border-radius: 8px;
         }
-        .submit-button, .reset-button {
-            padding: 10px 20px;
+        .user-message {
+            background-color: #e6e6fa;
+            margin-left: 20%;
+        }
+        .ai-message {
+            background-color: #f0f0ff;
+            margin-right: 20%;
+        }
+        .input-container {
+            max-width: 600px;
+            margin: 20px auto;
+            display: flex;
+            gap: 10px;
+        }
+        #questionInput {
+            flex-grow: 1;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        button {
+            padding: 8px 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
             cursor: pointer;
         }
-        .reset-button {
-            background: #FF4500;
-            color: #FFFFFF;
-        }
-        @media (max-width: 480px) {
-            .content-container {
-                padding: 10px;
-            }
+        button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
