--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q3 AIウミガメのスープ！</title>
+    <title>AI-CHAT</title>
     <style>
         .content-container {
             max-width: 800px;
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="content-container">
-        <h1>Q3 AIウミガメのスープ！</h1>
+        <h1>AI-CHAT</h1>
         <div id="chatContainer" class="chat-container"></div>
         <div class="input-container">
             <input type="text" id="questionInput" placeholder="質問を入力してください">
@@ -59,6 +59,6 @@
             <button id="resetChat">リセット</button>
         </div>
     </div>
-    <script src="/scripts/frontend-chat.js"></script>
+    <script type="module" src="/scripts/frontend-chat.js"></script>
 </body>
 </html>
