--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <button id="resetChat">リセット</button>
         </div>
     </div>
+    <!-- Firebase App (必須) -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <!-- Firestore -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+    
+    <!-- メインスクリプト -->
     <script type="module" src="/scripts/frontend-chat.js"></script>
 </body>
 </html>
