--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="content-container">
-        <h1>AI-CHATb</h1>
+        <h1>AI-CHATc</h1>
         <div id="chatContainer" class="chat-container"></div>
         <div class="input-container">
             <input type="text" id="questionInput" placeholder="質問を入力してください">
@@ -63,6 +63,7 @@
             <button id="resetChat">リセット</button>
         </div>
     </div>
+
     <!-- Firebase App (必須) -->
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <!-- Firestore -->
