--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="content-container">
-        <h1>AI-CHATb</h1>
+        <h1>AI-CHATc</h1>
         <div id="chatContainer" class="chat-container"></div>
         <div class="input-container">
             <input type="text" id="questionInput" placeholder="質問を入力してください">
