--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>子育て相談サイト - 研究用a</title>
+    <title>子育て相談サイト - 研究用</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap">
     <style>
@@ -206,7 +206,7 @@
     <div id="main-content">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-lg">
-                <span class="navbar-brand">子育てAI相談 - 研究用a</span>
+                <span class="navbar-brand">子育てAI相談 - 研究用b</span>
             </div>
         </nav>
 
