--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div id="main-content">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-lg">
-                <span class="navbar-brand">子育てAI相談 - 研究用g</span>
+                <span class="navbar-brand">子育てAI相談 - 研究用h</span>
             </div>
         </nav>
 
