--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div id="main-content">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-lg">
-                <span class="navbar-brand">子育てAI相談 - 研究用i</span>
+                <span class="navbar-brand">子育てAI相談 - 研究用j</span>
             </div>
         </nav>
 
@@ -246,7 +246,7 @@
                     </div>
 
                     <div class="text-center mt-4">
-                        <button id="end-chat" class="btn btn-secondary">チャットを終わる</button>
+                        <button type="button" class="btn btn-secondary mt-4" id="endChat">チャットを終わる</button>
                     </div>
                 </div>
             </div>
