--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- 同意画面 -->
     <div id="consent-overlay">
         <div id="consent-box">
-            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書4</h2>
+            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書5</h2>
             <p>このサイトは研究目的で運営されています。以下の内容をご確認いただき、同意いただける場合のみご利用ください。</p>
             <ul class="mb-4">
                 <li>本サイトは子育てに関するAIによるサポートの研究を目的としています。</li>
@@ -399,7 +399,11 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
     
-    <!-- メインスクリプト -->
+    <!-- Firebase SDKs を追加 -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+
+    <!-- あなたのスクリプト -->
     <script type="module" src="/scripts/frontend-chat.js"></script>
 
     <!-- Bootstrap -->
