--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>子育て相談サイト - 研究用</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap">
+
+
+
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+
+    <!-- あなたのスクリプト -->
+    <script type="module" src="/scripts/frontend-chat.js"></script>
+    <script type="module" src="/api/chat.js"></script>
+
+
+
     <style>
         body {
             background-color: #f0f4f8;
@@ -395,9 +407,7 @@
         </footer>
     </div>
 
-    <!-- Firebase -->
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
+
     
     <!-- Firebase SDKs を追加 -->
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
