--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>子育て相談サイト - 研究用</title>
+
+    <!-- スタイルシート -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap">
 
-
-
+    <!-- Firebase SDK - 必ずスクリプトの最初に配置 -->
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
-    <!-- あなたのスクリプト -->
-    <script type="module" src="/scripts/frontend-chat.js"></script>
-    <script type="module" src="/api/chat.js"></script>
+    <!-- あなたのスクリプト - type="module"属性は必須 -->
+    <script type="module" src="./scripts/frontend-chat.js"></script>
 
 
 
@@ -245,7 +245,7 @@
     <!-- 同意画面 -->
     <div id="consent-overlay">
         <div id="consent-box">
-            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書7</h2>
+            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書0</h2>
             <p>このサイトは研究目的で運営されています。以下の内容をご確認いただき、同意いただける場合のみご利用ください。</p>
             <ul class="mb-4">
                 <li>本サイトは子育てに関するAIによるサポートの研究を目的としています。</li>
