--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>子育て相談サイト - 研究用</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap">
+
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyACZVcf8cWzcu698PdbKKRVcbStH82lavc",
+            authDomain: "kukutyan-f48ae.firebaseapp.com",
+            projectId: "kukutyan-f48ae",
+            storageBucket: "kukutyan-f48ae.firebasestorage.app",
+            messagingSenderId: "894594120998",
+            appId: "1:894594120998:web:9160722e1d27e98afbd5e7",
+            measurementId: "G-8FSDCGV2M7"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+
+        // Make Firebase instances available globally
+        window.fbApp = app;
+        window.fbDb = db;
+    </script>
+
+    <!-- モジュールタイプのスクリプトとして読み込み -->
+    <script type="module" src="/libs/firebase.js"></script>
+    <script type="module" src="/scripts/frontend-chat.js"></script>
     <style>
         body {
             background-color: #f0f4f8;
@@ -233,7 +262,7 @@
     <!-- 同意画面 -->
     <div id="consent-overlay">
         <div id="consent-box">
-            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書5</h2>
+            <h2 class="mb-4">研究用Webサイト - 利用規約と同意書6</h2>
             <p>このサイトは研究目的で運営されています。以下の内容をご確認いただき、同意いただける場合のみご利用ください。</p>
             <ul class="mb-4">
                 <li>本サイトは子育てに関するAIによるサポートの研究を目的としています。</li>
@@ -399,12 +428,8 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
     
-    <!-- Firebase SDKs を追加 -->
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
-    <!-- あなたのスクリプト -->
-    <script type="module" src="/scripts/frontend-chat.js"></script>
+
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
