--- a/index.html
+++ b/index.html
@@ -141,50 +141,49 @@
             font-size: 1.2rem;
         }
 
-        /* アンケートフォーム */
-        #survey-form {
-            margin-top: 40px;
-        }
+/* アンケートフォームのスタイル */
+.btn-group {
+  display: flex !important;
+  justify-content: space-between !important;
+  width: 100%;
+  gap: 2px;
+}
 
-        .btn-group {
-            flex-wrap: nowrap;
-            margin: 15px 0;
-        }
+.btn-group strong {
+  flex: 1;
+  padding: 8px 2px;
+  font-size: 0.8rem;
+  text-align: center;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  cursor: pointer;
+  transition: all 0.2s;
+  user-select: none;
+}
 
-        .btn-group .btn {
-            flex: 1;
-            white-space: normal;
-            padding: 10px;
-            font-size: 0.9rem;
-            line-height: 1.2;
-            min-height: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+.btn-group strong:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
 
-        /* フッター */
-        footer {
-            margin-top: 50px;
-            padding: 20px 0;
-            background-color: #f0f4f8;
-            text-align: center;
-            font-size: 0.9rem;
-            color: #546e7a;
-        }
+.btn-group strong:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 
-        /* レスポンシブ対応 */
-        @media (max-width: 768px) {
-            .btn-group {
-                flex-wrap: wrap;
-            }
-            
-            .btn-group .btn {
-                min-width: 100%;
-                margin-bottom: 5px;
-            }
-        }
+.btn-group strong.selected {
+  background-color: #0d6efd;
+  color: white;
+  border-color: #0d6efd;
+}
+
+/* レスポンシブ対応 */
+@media (max-width: 576px) {
+  .btn-group strong {
+    padding: 6px 1px;
+    font-size: 0.75rem;
+  }
+}
     </style>
 </head>
 <body>
