--- a/index.html
+++ b/index.html
@@ -204,6 +204,29 @@
             margin: 0 auto;
         }
 
+        
+
+        /* フッター */
+        footer {
+            margin-top: 50px;
+            padding: 20px 0;
+            background-color: #f0f4f8;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #546e7a;
+        }
+
+        /* レスポンシブ対応 */
+        @media (max-width: 768px) {
+            .btn-group {
+                flex-wrap: wrap;
+            }
+            
+            .btn-group .btn {
+                min-width: 100%;
+                margin-bottom: 5px;
+            }
+        }
     </style>
 </head>
 <body>
