--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             justify-content: center;
             align-items: center;
             z-index: 1000;
+            overflow-y: auto;
+            padding: 20px 0;
         }
 
         #consent-box {
@@ -33,8 +35,28 @@
             border-radius: 10px;
             max-width: 600px;
             width: 90%;
-            margin: 20px;
+            margin: 20px auto;
+            max-height: 90vh;
+            overflow-y: auto;
         }
+
+        /* 同意ボタンのコンテナ */
+        .consent-button-container {
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        /* 同意ボタンのスタイル */
+        #consent-button {
+            padding: 0.75rem 2.5rem;
+            font-size: 1.1rem;
+            margin: 0 auto;
+        }
+
+
+
+
+
 
         #main-content {
             display: none;
@@ -252,7 +274,9 @@
           調査担当：平尾・阿部<br>
           連絡先：s_hirao@radish.ee.uec.ac.jp</p>
       
-          <button id="consent-button" class="btn btn-primary">同意して始める</button>
+          <div class="consent-button-container">
+            <button id="consent-button" class="btn btn-primary">同意して始める</button>
+        </div>
         </div>
       </div>
       
