--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-color: rgba(0, 0, 0, 0.7);
-            display: flex;
-            justify-content: center;
-            align-items: center;
             z-index: 1000;
-            overflow-y: auto;
-            padding: 20px 0;
+            display: block; /* flexからblockに変更 */
+            overflow-y: auto; /* スクロール可能に */
         }
 
         #consent-box {
@@ -35,24 +32,21 @@
             border-radius: 10px;
             max-width: 600px;
             width: 90%;
-            margin: 20px auto;
-            max-height: 90vh;
-            overflow-y: auto;
+            margin: 20px auto; /* 上下のマージンを追加 */
+            position: relative; /* 位置調整 */
         }
 
-        /* 同意ボタンのコンテナ */
         .consent-button-container {
             text-align: center;
             margin-top: 2rem;
+            width: 100%;
         }
 
-        /* 同意ボタンのスタイル */
         #consent-button {
             padding: 0.75rem 2.5rem;
             font-size: 1.1rem;
-            margin: 0 auto;
+            display: inline-block;
         }
-
 
 
 
