--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
     <!-- 同意画面 -->
     <div id="consent-overlay">
         <div id="consent-box">
-          <h2 class="mb-4">研究用Webサイトへようこそ - 研究参加の同意書</h2>
+          <h2 class="mb-4">研究参加の同意書</h2>
       
-          <p>本アンケートは、育児のご経験や専門の知識を有する方々の貴重な意見を集め、子育て支援AIチャットボットの開発に生かすことを目的としています。</p>
+          <p>本アンケートは、育児のご経験や専門の知識を有する方々の貴重な意見を集め、子育て支援AIチャットボット「ククちゃん」の開発に生かすことを目的としています。</p>
       
           <ul class="mb-4">
             <li>本研究は電気通信大学 人工知能先端研究センターが実施しています。</li>
