--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
+            min-height: 100vh; /* 100vhから変更 */
             background-color: rgba(0, 0, 0, 0.7);
             z-index: 1000;
-            display: block; /* flexからblockに変更 */
-            overflow-y: auto; /* スクロール可能に */
+            display: block;
+            overflow-y: auto;
+            padding: 20px 0;
         }
 
         #consent-box {
@@ -32,13 +33,15 @@
             border-radius: 10px;
             max-width: 600px;
             width: 90%;
-            margin: 20px auto; /* 上下のマージンを追加 */
-            position: relative; /* 位置調整 */
+            margin: 20px auto;
+            position: relative;
+            /* max-heightを削除してコンテンツが全て表示されるようにする */
         }
 
         .consent-button-container {
             text-align: center;
             margin-top: 2rem;
+            margin-bottom: 1rem; /* 下部にも余白を追加 */
             width: 100%;
         }
 
@@ -46,6 +49,17 @@
             padding: 0.75rem 2.5rem;
             font-size: 1.1rem;
             display: inline-block;
+        }
+
+        /* モバイル向けの追加調整 */
+        @media (max-width: 768px) {
+            #consent-overlay {
+                padding-bottom: 40px; /* モバイルでの下部余白を増やす */
+            }
+            
+            #consent-box {
+                margin: 10px auto; /* モバイルでのマージンを調整 */
+            }
         }
 
 
