--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </nav>
      -->
             <div class="text-center mb-4">
-                <h1 class="mb-3">ククちゃんとの対話</h1>
+                <h1 class="mb-3">ククちゃん</h1>
                 <p>
                     ククちゃんは子育て支援を目的として開発中のAIチャットボットです。<br>
                     子育てに関する質問や相談をお寄せいただき、システムの評価にご協力ください。
