--- a/index.html
+++ b/index.html
@@ -277,14 +277,15 @@
           <ul class="mb-4">
             <li>本研究は電気通信大学 人工知能先端研究センターが実施しています。</li>
             <li>皆様から提供いただいた情報は、最大限の注意を払って適切に管理し、厳重に保護いたします。</li>
-            <li>収集したデータは研究目的にのみ使用され、個人が特定される形で活用することはございません。</li>
+            <li>収集したデータは研究目的にのみ使用され、個人を特定できる情報が含まれていた場合でも、それらが外部に漏れることは一切ございません。</li>
             <li>研究成果は学術論文等で公表される可能性がありますが、個人を特定できる情報は含まれません。</li>
             <li>本システムで提供される情報は参考情報です。医療や専門的なアドバイスが必要な場合は、専門家にご相談ください。</li>
           </ul>
       
-          <p class="mb-4">調査責任者：<br>
+          <p class="mb-4">調査責任者：粕谷<br>
           電気通信大学 人工知能先端研究センター<br>
           調査担当：平尾・阿部<br>
+          研究協力　ChiCaRo社<br>
           連絡先：s_hirao@radish.ee.uec.ac.jp</p>
       
           <div class="consent-button-container">
