--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <li>会話が終わりましたら、「チャットを終わる」ボタンを押してください。</li>
               <li>その後表示される最終アンケートにご回答ください。</li>
             </ol>
-            <p class="time-notice">所要時間はおよそ10分です。</p>
+            <p class="time-notice">所要時間はおよそ5~10分です。<br>よろしければ何パターンか会話を評価して頂きたく思います。</p>
           </div>
       
 
