--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
           <div class="study-flow mb-4">
             <h3 class="mb-3">研究の流れ</h3>
             <ol class="flow-list mb-4">
-              <li>ククちゃんに子育ての相談や質問をしていただきます。</li>
-              <li>会話が終わりましたら、「チャットを終わる」ボタンを押してください。</li>
+              <li>ククちゃんに子育ての相談や質問をしてください。</li>
+              <li>一連の会話が終わりましたら、「チャットを終わる」ボタンを押してください。</li>
               <li>その後表示される最終アンケートにご回答ください。</li>
             </ol>
             <p class="time-notice">所要時間はおよそ5~10分です。<br>よろしければ何パターンか会話を評価して頂きたく思います。</p>
@@ -300,7 +300,7 @@
             
           電気通信大学 人工知能先端研究センター<br>
           調査担当：平尾・阿部<br>
-          研究協力　ChiCaRo社<br>
+          研究協力　株式会社ＣｈｉＣａＲｏ（チカロ）<br>
           連絡先：s_hirao@radish.ee.uec.ac.jp</p>
       
           <div class="consent-button-container">
