--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
               <li>ククちゃんに子育ての相談や質問をしてください。</li>
               <li>一連の会話が終わりましたら、「チャットを終わる」ボタンを押してください。</li>
               <li>その後表示される最終アンケートにご回答ください。</li>
+              <li>新たな子育ての相談があれば1～3を繰り返してください。</li>
             </ol>
             <p class="time-notice">所要時間はおよそ5~10分です。<br>よろしければ何パターンか会話を評価して頂きたく思います。</p>
           </div>
