--- a/index.html
+++ b/index.html
@@ -322,6 +322,39 @@
                 font-size: 14px;
             }
         }
+
+        .responsive-title {
+            font-size: 2.5rem; /* デフォルトサイズ */
+        }
+
+        .responsive-text {
+            font-size: 1rem; /* デフォルトサイズ */
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+
+        /* スマートフォンサイズ */
+        @media (max-width: 480px) {
+            .responsive-title {
+                font-size: 1.75rem;
+            }
+            .responsive-text {
+                font-size: 0.8rem;
+                padding: 0 10px;
+            }
+        }
+
+        /* 極小画面 */
+        @media (max-width: 320px) {
+            .responsive-title {
+                font-size: 1.5rem;
+            }
+            .responsive-text {
+                font-size: 0.6rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -335,11 +368,12 @@
             </nav>
      -->
             <div class="text-center mb-4">
-                <h1 class="mb-3">ククちゃん</h1>
-                <p>
+                <h1 class="mb-3 responsive-title">ククちゃん</h1>
+                <p class="responsive-text">
                     ククちゃんは子育て支援を目的として開発中のAIチャットボットです。<br>
                     子育てに関する質問や相談をお寄せいただき、システムの評価にご協力ください。
                 </p>
+            </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-10">
@@ -350,9 +384,8 @@
                             
                             <!-- 入力エリア -->
                             <div class="input-container">
-                                <input type="text" id="questionInput" placeholder="質問を入力してください">
+                                <textarea id="questionInput" class="form-control" rows="1"></textarea>
                                 <button id="sendQuestion" class="btn btn-primary">送信</button>
-                                <!-- <button id="resetChat" class="btn btn-secondary">リセット</button> -->
                             </div>
                         </div>
                     </div>
