--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             height: 400px;
             overflow-y: auto;
             background-color: #ffffff;
-            padding: 20px;
+            padding: 15px;
             border-radius: 10px;
             box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
             margin-bottom: 20px;
@@ -43,22 +43,73 @@
         }
 
         .user-message, .ai-message {
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 10px;
-            max-width: 90%;
+            max-width: 80%;
+            margin: 10px;
+            padding: 12px;
+            border-radius: 12px;
+            line-height: 1.4;
             word-wrap: break-word;
+            font-size: 16px; /* デフォルトサイズ */
         }
 
+
         .user-message {
+            margin-left: auto;
             background-color: #dcedc8;
             margin-left: auto;
         }
 
         .ai-message {
+            margin-right: auto;
             background-color: #f0f4c3;
             margin-right: auto;
         }
+
+
+
+        /* モバイル端末用のスタイル */
+        @media (max-width: 480px) {
+            .user-message, .ai-message {
+
+                font-size: 12px; /* LINEに近いサイズ */
+            }
+
+            #chatContainer {
+                padding: 10px 8px;
+            }
+
+            /* 入力エリアのスタイル調整 */
+            #questionInput {
+                font-size: 12px;
+                padding: 8px;
+            }
+
+            /* 送信ボタンのサイズ調整 */
+            #sendQuestion {
+                font-size: 12px;
+                padding: 6px 12px;
+            }
+        }
+
+        /* さらに小さい画面用 */
+        @media (max-width: 320px) {
+            .user-message, .ai-message {
+
+                font-size: 13px;
+            }
+        }
+
+
+
+
+
+
+
+
+
+
+
+
 
         /* 入力エリア */
         .input-container {
@@ -215,17 +266,6 @@
 
 
 
-
-
-        /* チャットコンテナのスタイル */
-        #chatContainer {
-            height: 500px;
-            overflow-y: auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
 
         /* 入力エリアの改善 */
         .input-container {
