--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         /* チャットエリア */
         #chatContainer {
-            height: 600px;
+            height: 500px;
             overflow-y: auto;
             background-color: #ffffff;
             padding: 15px;
@@ -88,6 +88,13 @@
             #sendQuestion {
                 font-size: 14px;
                 padding: 6px 12px;
+            }
+
+
+                    /* チャットエリア */
+            #chatContainer {
+                height: 500px;
+
             }
         }
 
