--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
                     <!-- 評価ボタン -->
                     <div id="binary-rating" class="text-center mt-4" style="display: none;">
-                        <p class="mb-3">この回答を評価してください？評価すると次のチャットを送ることができます。</p>
+                        <p class="mb-3">この回答を評価すると次のチャットを送ることができます。</p>
                         <div>
                             <button class="rating-button text-success" data-rating="good">
                                 👍<br><span style="font-size: 0.9rem;">Good</span>
