--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             </nav>
      -->
             <div class="text-center mb-4">
-                <h1 class="mb-3 responsive-title">ククちゃん1</h1>
+                <h1 class="mb-3 responsive-title">ククちゃん</h1>
                 <p class="responsive-text">
                     ククちゃんは子育て支援を目的として開発中のAIチャットボットです。<br>
                     子育てに関する質問や相談をお寄せいただき、システムの評価にご協力ください。
