--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                         </div>
             
                         <div class="survey-item mb-4">
-                            <p class="mb-2">7. あなたのお子さんと関わる経験・ご職業を教えてください：</p>
+                            <p class="mb-2">7. あなたのお子さんと関わる経験・ご職業を教えてください(複数の場合は最も長く経験しているもの)：</p>
                             <div class="rating-buttons" role="group" aria-label="職業">
                                 <input type="radio" class="btn-check" name="occupation" id="occ1" value="nursery">
                                 <label class="btn btn-outline-primary" for="occ1">保育士</label>
