--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                         </div>
 
                         <div class="survey-item mb-4">
-                            <p class="mb-2">2. あなたに合った回答ができていましたか：</p>
+                            <p class="mb-2">2. あなたが求める回答ができていましたか：</p>
                             <div class="rating-buttons" role="group" aria-label="個別化された回答">
                                 <input type="radio" class="btn-check" name="personalization" id="personalization1" value="1">
                                 <label class="btn btn-outline-primary" for="personalization1">1<br>できていない</label>
@@ -562,7 +562,7 @@
                         </div>
 
                         <div class="survey-item mb-4">
-                            <p class="mb-2">4. あなたの質問の意図に沿って返答されていましたか：</p>
+                            <p class="mb-2">4. あなたの質問の意図をくみ取って返答していましたか：</p>
                             <div class="rating-buttons" role="group" aria-label="意図の理解">
                                 <input type="radio" class="btn-check" name="intention" id="intention1" value="1">
                                 <label class="btn btn-outline-primary" for="intention1">1<br>できていない</label>
