--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
             line-height: 1.5;
             resize: none;
             transition: border-color 0.3s;
+            overflow-y: hidden; /* 縦スクロールを非表示 */
         }
 
         #questionInput:focus {
