--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
 
         /* アンケートフォーム */
         #survey-form {
-            margin: 40px auto 0px;
-        
-            max-width: 1000px;
+            margin-top: 40px;
         }
 
         .btn-group {
@@ -428,10 +426,6 @@
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-        }
-
-        .col-md-10 {
-            max-width: 1200px;
         }
     </style>
 </head>
