--- a/index.html
+++ b/index.html
@@ -738,6 +738,7 @@
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/scripts/auto-chat.js"></script>
 
     <!-- 同意画面の制御 -->
     <script type="module">
