--- a/index.html
+++ b/index.html
@@ -460,8 +460,17 @@
                             
                             <!-- 入力エリア -->
                             <div class="input-container">
-                                <textarea id="questionInput" class="form-control" rows="1"></textarea>
-                                <button id="sendQuestion" class="btn btn-primary">送信</button>
+                                <textarea 
+                                    id="questionInput" 
+                                    class="form-control" 
+                                    rows="1"
+                                    placeholder="メッセージを入力してください"
+                                ></textarea>
+                                <button 
+                                    id="sendQuestion" 
+                                    class="btn btn-primary"
+                                    type="button"  <!-- type="button"を明示的に指定 -->
+                                >送信</button>
                             </div>
                         </div>
                     </div>
@@ -729,11 +738,11 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
     
-    <!-- メインスクリプト -->
-    <script type="module" src="/scripts/frontend-chat.js"></script>
-
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- メインスクリプト（パスを修正） -->
+    <script type="module" src="./scripts/frontend-chat.js"></script>
 
     <!-- 同意画面の制御 -->
 
