--- a/index.html
+++ b/index.html
@@ -733,15 +733,12 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
     
     <!-- メインスクリプト -->
-    <script type="module" src="scripts/frontend-chat.js"></script>
+    <script type="module" src="/scripts/frontend-chat.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- 同意画面の制御 -->
 
-    <!-- スクリプトの読み込み -->
-    <script type="module" src="libs/firebase.js"></script>
-    <script type="module" src="scripts/frontend-chat.js"></script>
 </body>
 </html>
